# phonomatic

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
phonomatic/: __init__.py  _phonomatic.py  confusionmatrix.py  node.py
src/phonomatic/: __init__.py  confusionmatrix.py  matchresults.py  node.py
tests/: test_confusionmatrix.py  test_nodesmatching.py
